tests/negative/gold/incomplete_string_interpolation_format3_test.gold
tests/negative/incomplete_string_interpolation_format3_test.toit:6:7: error: Invalid format string
  "$(%
      ^
tests/negative/incomplete_string_interpolation_format3_test.toit:6:7: error: Incomplete expression
  "$(%
      ^
tests/negative/incomplete_string_interpolation_format3_test.toit:6:5: error: Missing closing ')'
  "$(%
    ^~
tests/negative/incomplete_string_interpolation_format3_test.toit:6:7: error: Unterminated string
  "$(%
      ^
Compilation failed.
